# PO1_prep

otest/: Makefile  ObserwatorLicznik.h  otest.cpp
week1/fraction/: fraction.cpp  fraction.h  main.cpp
week1/functions/: FElementarne.cpp  FElementarne.h  FZlozona.cpp  FZlozona.h  Fun.h  Op.h  Rozniczka.cpp  Rozniczka.h  Trygonometryczne.cpp  Trygonometryczne.h  main.cpp
week10/ClonesF/: ClonesF.h  main.cpp
week11/Variables/: main.cpp
week11/Variables/include/: Variable.h
week12/Pair/include/: PairOfNumbers.h  RangeArray.h
week2/args and algos/: Argumenty.cpp  Argumenty.h  CMakeLists.txt  Pierwiastek.h  Suma.h  main.cpp
week2/complex numbers/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.h  main.cpp
week2/vector/: main.cpp
week2/vector/include/: V.h
week2/vector/src/: V.cpp
week3/Fancy Numbers/: CMakeLists.txt  FancyText.cpp  FancyText.h  main.cpp
week4/atest/: Algs.h  Argumenty.cpp  Argumenty.h  CMakeLists.txt  SekwencjaAlgorytmow.cpp  SekwencjaAlgorytmow.h  atest.cpp  main.cpp
week4/functions/: CMakeLists.txt  Funkcje.cpp  Funkcje.h  ZlozenieFunkcji.cpp  ZlozenieFunkcji.h  functions.cpp
week5/figures/: Figura.cpp  Figura.h  KontenerFigur.cpp  KontenerFigur.h  Prostokat.cpp  Prostokat.h  Wierzcholek.cpp  Wierzcholek.h  main.cpp
week5/vtest/: CMakeLists.txt  FloatWrapper.cpp  FloatWrapper.h  IntWrapper.cpp  IntWrapper.h  PArr.cpp  PArr.h  StringWrapper.cpp  StringWrapper.h  Wrapper.h
week6/formulas/: Extended.h  Makefile  Primitive.h  Product.h  Ratio.h  Sum.h  main.cpp
week6/otest/: Obserwator.h  ObserwatorWypisywacz.h  Obserwowany.h
week7/FileSystemStructure/: CMakeLists.txt  main.cpp
week7/FileSystemStructure/include/: Dir.h  File.h  FileSystemBase.h
week7/FileSystemStructure/src/: Dir.cpp  File.cpp  FileSystemBase.cpp
week8/GameObj/: CMakeLists.txt  main.cpp
week8/GameObj/include/: GameObj.h
week8/GameObj/src/: GameObj.cpp
week8/Policies/: main.cpp
week8/Policies/include/: MyCalculation.h  Policy.h
week9/List/: CMakeLists.txt  main.cpp
week9/List/include/: List.h
week9/Point2D/: main.cpp
week9/Point2D/include/: Point2D.h
week9/Point2D/src/: Point2D.cpp
